# Relynx

./: LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx  bindings.d.ts  rpc.ts  styles.css  theme.css
src-tauri/: Cargo.toml  Delete Request.http  Get Products.http  Update Product.http  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: dev.pub_key.pem  prod.pub_key.pem  pub_key.development.pem  pub_key.production.pem
src-tauri/src/: client.rs  commands.rs  config.rs  cookie_jar.rs  environment.rs  error.rs  import.rs  license.rs  main.rs  model.rs  pathdiff.rs  runner.rs  sanitize.rs  serialize.rs  tree.rs
src-tauri/src/client/: certificate.rs  client.rs  client_model.rs  cookie.rs  easy_ext.rs  error.rs  options.rs  request.rs  timings.rs
src-tauri/src/commands/: drag_and_drop.rs
src-tauri/src/import/: postman.rs
src-tauri/tests/relynx-collection/: New Request.http  http-client.env.json  http-client.private.env.json  relynx.collection.json
src-tauri/tests/relynx-collection/simple/: custom_verb.http  get_request.http  get_request_with_headers.http  get_request_with_params.http  post_form_urlencoded.http  post_json.http  post_request.http
src/common/: common.ts  errorhandling.ts  eventhandling.ts  license.ts  modal.tsx  requestUtils.tsx  treeUtils.ts
src/components/: ActionDropdown.tsx  CollectionEntry.tsx  CollectionInfo.tsx  CollectionMenuView.tsx  CollectionOverviewComponent.tsx  CookieJarComponent.tsx  CopyToClipboard.tsx  EnvTable.tsx  EnvironmentComponent.tsx  Filepicker.tsx  Headers.tsx  HelpTooltip.tsx  ImportResultComponent.tsx  KeyValueRow.tsx  Navbar.tsx  QueryParams.tsx  RequestBodyComp.tsx  RequestComponent.tsx  RequestImportMessages.tsx  RequestItemAsButton.tsx  RequestSettingsComponent.tsx  RequestTreeComponent.tsx  ResultDisplay.tsx  SendRequestButton.tsx  SingleRequestResult.tsx  SlideMenu.tsx  StatusCodeTag.tsx  WarningCollapsible.tsx
src/components/body/: BinaryFileComp.tsx  BodySelectMenu.tsx  MultipartBody.tsx  RequestBodyComp.tsx  SingleMultipart.tsx  TextBody.tsx  UrlEncodedBody.tsx
src/components/collection/: CollectionEntry.tsx  CollectionInfo.tsx  CollectionMenuView.tsx  CollectionOverviewComponent.tsx
src/components/modals/: AddCollectionModal.tsx  AddCookieHeaderModal.tsx  AddExistingCollectionsModal.tsx  CreateCollectionModal.tsx  CreateEnvironmentModal.tsx  CreateGroupModal.tsx  CreateRequestModal.tsx  EditCollectionNameModal.tsx  EditGroupNameModal.tsx  EditRequestNameModal.tsx  ErrorReportingModal.tsx  ImportCollectionModal.tsx  ImportJetbrainsHttpFolder.tsx  ImportPostmanModal.tsx  ImportResultModal.tsx  TrialModal.tsx
src/model/: environment.ts  error.ts  model.ts  request.ts
src/pages/: OverviewComponent.tsx
src/stores/: requestStore.original.ts  requestStore.ts
