[package]
name = "relynx"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.28.1", features = ["rt"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.17"
walkdir = "2.3.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
