[package]
name = "relynx"
version = "0.0.0"
description = "A Tauri App"
authors = ["laeri@laeri.me"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "dialog", "clipboard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.28.1", features = ["rt"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.17"
walkdir = "2.3.3"
postman_collection = "0.2.0"
#@TODOhttp-rest-file = { git = "https://github.com/Laeri/http-rest-file.git", tag="v0.1.1" }
http-rest-file = { path = "../../../http-rest-file/", features = ["serde", "rspc"] }
uuid = { version = "1.3.2", features=["v4"] }  

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
