[package]
name = "relynx"
version = "0.0.0"
description = "A Tauri App"
authors = ["laeri@laeri.me"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard", "dialog", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
directories = "5.0.1"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.28.1", features = ["rt"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.17"
walkdir = "2.3.3"
postman_collection = { git = "https://github.com/Laeri/postman-collection-rs", branch = "fix_tests" }
#@TODOhttp-rest-file = { git = "https://github.com/Laeri/http-rest-file.git", tag="v0.1.1" }
http-rest-file = { path = "../../../http-rest-file/", features = ["serde", "rspc"] }
uuid = { version = "1.3.2", features= ["v4"] }  
regex = "1.8.3"
lazy_static = "1.4.0"
curl = "0.4.44"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }
base64 = "0.21.2"
url = "2.4.0"
encoding = "0.2.33"
curl-sys = "0.4.63"
rsa =  { version = "0.9.2", features = ["sha2"] }
hex = "0.4.3"
thiserror = "1.0.43"
cookie = "0.17.0"

[dev-dependencies]
httptest = "0.15.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
